--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 body {
   background-color: var(--primary-color);
   font-family: 'Poppins', sans-serif;
-  margin: 0;
+  margin: 0%;
 }
 
 header {
@@ -25,10 +25,10 @@ header {
 .search {
   background-color: transparent;
   border: 2px solid var(--primary-color);
-  border-radius: 50px;
+  border-radius: 51px;
   font-family: inherit;
   font-size: 1rem;
-  padding: 0.5rem 1rem;
+  padding: 0.6rem 1rem;
   color: #fff;
 }
 
